Add the beginnings of a Function SDK
I'm sure this won't be close to the end shape of this SDK, but I want to
start somewhere. This is essentially a few utilities I found I wanted
when writing https://github.com/crossplane-contrib/function-patch-and-transform

Signed-off-by: Nic Cope <nicc@rk0n.org>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -37,6 +37,7 @@ linters-settings:
       - standard
       - default
       - prefix(github.com/crossplane/crossplane-runtime)
+      - prefix(github.com/crossplane/function-sdk-go)
       - blank
       - dot
 
