--- a/.golangci.yml
+++ b/.golangci.yml
@@ -182,31 +182,31 @@ linters:
       # rather than using a pointer.
       - linters:
           - gocritic
-        text: '(hugeParam|rangeValCopy):'
+        text: "(hugeParam|rangeValCopy):"
 
       # This "TestMain should call os.Exit to set exit code" warning is not clever
       # enough to notice that we call a helper method that calls os.Exit.
       - linters:
           - staticcheck
-        text: 'SA3000:'
+        text: "SA3000:"
 
       # This is a "potential hardcoded credentials" warning. It's triggered by
       # any variable with 'secret' in the same, and thus hits a lot of false
       # positives in Kubernetes land where a Secret is an object type.
       - linters:
           - gosec
-        text: 'G101:'
+        text: "G101:"
 
       # This is an 'errors unhandled' warning that duplicates errcheck.
       - linters:
           - gosec
-        text: 'G104:'
+        text: "G104:"
 
       # This is about implicit memory aliasing in a range loop.
       # This is a false positive with Go v1.22 and above.
       - linters:
           - gosec
-        text: 'G601:'
+        text: "G601:"
 
       # Some k8s dependencies do not have JSON tags on all fields in structs.
       - linters:
@@ -218,7 +218,7 @@ linters:
       # warnings globally instead of suppressing them with comments everywhere.
       - linters:
           - staticcheck
-        text: 'SA1019: .+ is deprecated: Use Composition Functions instead.'
+        text: "SA1019: .+ is deprecated: Use Composition Functions instead."
 
     paths:
       - zz_generated\..+\.go$
@@ -243,7 +243,7 @@ formatters:
       sections:
         - standard
         - default
-        - prefix(github.com/crossplane/crossplane-runtime)
+        - prefix(github.com/crossplane/crossplane-runtime/v2)
         - prefix(github.com/crossplane/function-sdk-go)
         - blank
         - dot
